--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,11 @@ services:
     env_file:
       - .env
     restart: always
+    depends_on:
+      - redis
+
   redis:
     image: redis:6.2-alpine
     ports:
       - '6379:6379'
+    restart: always
